- main button: ctrl+click = toggle_menu - padding - init asserts - fixed title bg - main menu: truncate hostnames - userjs_ui cleanup - allowed globally tooltip

--- a/src/jsarmor.css
+++ b/src/jsarmor.css
@@ -116,19 +116,17 @@ h1	{ color:#fff; font-weight:bold; font-size: 1em; text-align: center;
 /* menu item stuff */
 .right_item		{ float:right; }
 
-ul			{ padding:0; margin:0 }
+ul			{ padding:0 0 0 1px; margin:0 }
 ul ul			{ margin-left:1em }
-li			{ list-style:none; border-radius:6px; }
+li			{ list-style:none; border-radius:3px; padding:0 0 0 2px}
 
 li:hover		{ background:#ddd } /* items active by default */
 li.inactive:hover	{ background:inherit }
 
 
-/* mode menu item */
-.selected, .menu .selected:hover {
-	background-color: #fa4;
-	padding: 1px; /* for highlighting */
-}
+/* mode menu items */
+li.block_all, li.filtered, li.relaxed, li.allow_all	{ padding:2px }
+.menu .selected, .menu .selected:hover { background-color: #fa4; }
 
 
 /*************************************************************************************************************/
@@ -143,6 +141,8 @@ li.inactive:hover	{ background:inherit }
 .separator	{ height: 1px; display: block; background-color: #bbb; margin-left: auto; margin-right: auto; }
 
 .frame		{ border:1px solid #bbb; margin:10px; padding:9px; position:relative; min-width:200px; }
+.frame td, .frame li	{ padding: 2px; }
+
 .frame_title	{ position:absolute; top:-10px; background: #ccc; }
 
 /* file input form styling: http://www.quirksmode.org/dom/inputfile.html */
